// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`API Provider Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Anthropic official API > api-provider-anthropic-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:latest
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Code Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI and custom providers
      # ==================================================
      # Anthropic Official API
      ANTHROPIC_AUTH_TOKEN: "sk-ant-test-key"
      # No ANTHROPIC_URL needed - uses default Anthropic endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - postgres-data:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  postgres-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`API Provider Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Zhipu AI (ZAI) provider > api-provider-zai-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:latest
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Code Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI and custom providers
      # ==================================================
      # Zhipu AI (ZAI) - uses Anthropic-compatible API
      ANTHROPIC_AUTH_TOKEN: "test-zai-key"
      ANTHROPIC_URL: "https://open.bigmodel.cn/api/anthropic"
      # API Provider: Zhipu AI (ZAI)
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - postgres-data:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  postgres-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`API Provider Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for custom API endpoint > api-provider-custom-zh-CN 1`] = `
"# Hagicode Docker Compose Configuration
# Auto-generated by Docker Compose Generator
# Generated at: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持:
# - 加入我们的 QQ 群: 610394020
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:latest
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      ConnectionStrings__Default: "Host=postgres;Port=5432;Database=hagicode;Username=postgres;Password=postgres"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude Code Configuration
      # All providers use ANTHROPIC_AUTH_TOKEN
      # ANTHROPIC_URL is set for ZAI and custom providers
      # ==================================================
      # Custom Anthropic-compatible API
      ANTHROPIC_AUTH_TOKEN: "custom-api-key"
      ANTHROPIC_URL: "https://custom-ai-proxy.example.com/v1"
      # API Provider: Custom Endpoint
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
    depends_on:
      postgres:
        condition: service_healthy
    networks:
      - pcode-network
    restart: unless-stopped

  postgres:
    image: bitnami/postgresql:latest
    environment:
      POSTGRES_DATABASE: hagicode
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
      POSTGRES_HOST_AUTH_METHOD: trust
      TZ: Asia/Shanghai
    volumes:
      - postgres-data:/bitnami/postgresql
    healthcheck:
      test: ["CMD", "pg_isready", "-U", "postgres"]
      interval: 10s
      timeout: 3s
      retries: 3
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  postgres-data:

networks:
  pcode-network:
    driver: bridge"
`;
